--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,7 +31,7 @@
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-<link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon"/>
 
   <!-- Custom styles for this theme -->
   <!--<link href="assets/css/agency.min.css" rel="stylesheet">-->
